--- a/TBOAdmin/appsettings.json
+++ b/TBOAdmin/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=tobeone;user=root;password=1ifbabbaihihF"
+  }
 }
