--- a/TBOAdmin/appsettings.json
+++ b/TBOAdmin/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=tobeone;user=root;password=1ifbabbaihihF"
+    "DefaultConnection": "Server=localhost; Database=tobeone; User Id=sa; Password=sa;"
   }
 }
