Added demo CRUD

--- a/TBOAdmin/appsettings.json
+++ b/TBOAdmin/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=tobeone; User Id=sa; Password=sa;"
+    "DefaultConnection": "Server=localhost; Database=ToBeOne; User Id=sa; Password=sa;"
   }
 }
