--- a/TBOAdmin/public/manifest.json
+++ b/TBOAdmin/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "TBOAdmin",
-  "name": "TBOAdmin",
+  "name": "ToBeOne - Admin Panel",
   "icons": [
     {
       "src": "favicon.ico",
