--- a/TBOBackEnd/appsettings.json
+++ b/TBOBackEnd/appsettings.json
@@ -7,5 +7,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Database=ToBeOne; User Id=sa; Password=sa;"
+  },
+  "AppSettings": {
+    "Secret": "mTzV*YBaWI9bo@O7#Xb@xUZQI@#EjBtu1um!54Mw4!asvouZ0n"
   }
 }
