--- a/TBOAdmin/package.json
+++ b/TBOAdmin/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template",
-  "version": "2.5.0",
-  "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
-  "author": "Łukasz Holeczek",
-  "homepage": "https://coreui.io",
+  "name": "tobeone-admin-panel",
+  "version": "1.0.0",
+  "description": "ToBeOne Admin Panel",
+  "author": "Pro Dev",
+  "homepage": "https://tobeone.com",
   "copyright": "Copyright 2017-2019 creativeLabs Łukasz Holeczek",
   "license": "MIT",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
+    "url": "https://github.com/prodev9999/tobeone.git"
   },
   "dependencies": {
     "@coreui/coreui": "^2.1.9",
@@ -31,10 +31,14 @@
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^7.1.0",
+    "redux": "^4.0.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
@@ -49,7 +53,7 @@
     "eject": "react-scripts eject"
   },
   "bugs": {
-    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
+    "url": "https://github.com/prodev9999/tobeone/issues"
   },
   "eslintConfig": {
     "extends": "react-app"
